--- a/HotelSystem.Model/HotelSystem.Model.csproj
+++ b/HotelSystem.Model/HotelSystem.Model.csproj
@@ -190,6 +190,9 @@
     <Compile Include="ScoreType.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Settlement.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Smokeless.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
@@ -197,6 +200,9 @@
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="transaction.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UserLog.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
     <Compile Include="UserRole.cs">
