--- a/HotelSystem.Web/HotelSystem.Web.csproj
+++ b/HotelSystem.Web/HotelSystem.Web.csproj
@@ -491,6 +491,14 @@
     <Content Include="Areas\Admin\Views\Settlement\_HotelPage.cshtml" />
     <Content Include="Areas\Admin\Views\Settlement\HotelList.cshtml" />
     <Content Include="Areas\Admin\Views\Settlement\History.cshtml" />
+    <Content Include="Areas\Admin\Views\Settlement\_HistoryPage.cshtml" />
+    <Content Include="Areas\Admin\Views\Settlement\_HistoryList.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\OrderList.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\History.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\_OrderPage.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\_OrderList.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\_HistoryPage.cshtml" />
+    <Content Include="Areas\Hotel\Views\Settlement\_HistoryList.cshtml" />
     <None Include="Properties\PublishProfiles\Release.pubxml" />
     <Content Include="Scripts\assets\fonts\fontawesome-webfont.woff2" />
     <Content Include="Scripts\assets\plugins\bootstrap-daterangepicker-master\.gitignore" />
@@ -548,6 +556,7 @@
     <Compile Include="Areas\Hotel\Controllers\InfoController.cs" />
     <Compile Include="Areas\Hotel\Controllers\OrderController.cs" />
     <Compile Include="Areas\Hotel\Controllers\RoomController.cs" />
+    <Compile Include="Areas\Hotel\Controllers\SettlementController.cs" />
     <Compile Include="Areas\Hotel\Controllers\UserController.cs" />
     <Compile Include="Areas\Hotel\HotelAreaRegistration.cs" />
     <Compile Include="Controllers\ArticleController.cs" />
