新增企业注册，级修复

--- a/HotelSystem.Model/HotelSystem.Model.csproj
+++ b/HotelSystem.Model/HotelSystem.Model.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Comment.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Company.cs">
+      <DependentUpon>DBModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Conference.cs">
       <DependentUpon>DBModel.tt</DependentUpon>
     </Compile>
